--- a/BlazorApp1/Components/Pages/Home.razor
+++ b/BlazorApp1/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hi Team Welcome to NCPL Marketing Phase !</h1>
+<h1>Hi Team Welcome to  Marketing Phase !</h1>
 
 Welcome to your new app.
